--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.Project2272"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.demo"
+            android:exported="false"
+            android:theme="@style/Theme.Project2272" />
+        <activity
             android:name=".Activity.AdminMainActivity"
             android:exported="false" />
         <activity
