--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.Project2272"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.AddEditProductActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".Activity.ManageProductsActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.demo"
             android:exported="false"
             android:theme="@style/Theme.Project2272" />
