--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Project2272"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:name=".Activity.MyApplication">
         <activity
             android:name=".Activity.AddEditProductActivity"
             android:exported="false"
@@ -19,10 +20,6 @@
         <activity
             android:name=".Activity.ManageProductsActivity"
             android:exported="false" />
-        <activity
-            android:name=".Activity.demo"
-            android:exported="false"
-            android:theme="@style/Theme.Project2272" />
         <activity
             android:name=".Activity.AdminMainActivity"
             android:exported="false" />
