--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.Project2272"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.RepwActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.ForgotActivity"
             android:exported="false" />
         <activity
