--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.Project2272"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.ShowOrderActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.RepwActivity"
             android:exported="false" />
         <activity
@@ -26,8 +29,7 @@
             android:exported="false" />
         <activity
             android:name=".Activity.AddEditProductActivity"
-            android:exported="false"
-            android:windowSoftInputMode="adjustResize" />
+            android:exported="false" />
         <activity
             android:name=".Activity.ManageProductsActivity"
             android:exported="false" />
