--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Project2272"
         tools:targetApi="31">
-        <activity
-            android:name=".Activity.ManageProductsActivity"
-            android:exported="false" />
+
 
         <activity
             android:name=".Activity.AddEditProductActivity"
@@ -44,6 +42,9 @@
             android:exported="false" />
         <activity
             android:name=".Activity.AdminMainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.AdminStatsActivity"
             android:exported="false" />
         <activity
             android:name=".Activity.CartActivity"
