--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
     <application
         android:name=".Activity.MyApplication"
         android:allowBackup="true"
@@ -22,16 +20,19 @@
             android:name=".Activity.RepwActivity"
             android:exported="false" />
         <activity
-            android:name=".Activity.ForgotActivity"
-            android:exported="false" />
-        <activity
             android:name=".Activity.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".Activity.AddEditProductActivity"
+            android:name=".Activity.ForgotActivity"
             android:exported="false" />
         <activity
-            android:name=".Activity.ManageProductsActivity"
+            android:name=".Activity.ProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.OrderActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.NotificationActivity"
             android:exported="false" />
         <activity
             android:name=".Activity.AdminMainActivity"
@@ -54,6 +55,7 @@
         </activity>
         <activity
             android:name=".Activity.MainActivity"
+            android:windowSoftInputMode="adjustPan"
             android:exported="true" />
     </application>
 
